--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 <body class="body">
 
+	<div class="loader"></div>
+
 	<div id="fullpage">
 		<div class="section " id="section0">
 			<div class="wrapper">
