Finished creating loading icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<!-- Mapbox -->
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.css' rel='stylesheet'>
 
+	<link rel="stylesheet" href="https://spin.js.org/spin.css">
+
 	<!-- Page Piling css -->
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 
@@ -24,7 +26,9 @@
 </head>
 <body class="body">
 
-	<div class="loader"></div>
+	<div class="loader">
+			<i class="fas fa-spinner fa-spin fa-7x"></i>
+	</div>
 
 	<div id="fullpage">
 		<div class="section " id="section0">
@@ -253,8 +257,8 @@
 	<script type="text/javascript" src="js/script.js"></script>
 
 	<script type="text/javascript">
-		var getMeals = document.getElementById('mealOption');
-		var getGuests = document.getElementById('getGuests');
+		// var getMeals = document.getElementById('mealOption');
+		// var getGuests = document.getElementById('getGuests');
 
 
 	</script>
