Cleaned up code. Guests is a number not string. Need to turn meal options from string to number

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 						</div><!-- slide2 Ends -->
 
 						<p class="optionsFont daySelectedTitle">You have selected...</p>
-						<div class="optionsFont hello" id="daysSelected">0</div>
-						<div class="optionsFont hello" id="daysText">Days</div>
+						<div class="optionsFont howManyDays" id="daysSelected">0</div>
+						<div class="optionsFont howManyDays" id="daysText">Days</div>
 						<div class="note"><p>A minimum of 1 night is required. The max is 15 nights. <br> *Required Field<p></div>
 					</div>
 				</div>
@@ -114,11 +114,11 @@
 						<h2 class="mainTitle">Select your meal options</h2>
 						<select class="form-control form-control-lg dropDownOption" id="getMealOption" required>
 							<option disabled selected value>Select an option</option>
-							<option value="Breakfast">Breakfast - $30</option>
-							<option value="Lunch">Lunch - $30</option>
-							<option value="Dinner">Dinner - $30</option>
-							<option value="All meals">All meals - $90</option>
-							<option value="None">none</option>
+							<option value="30">Breakfast - $30</option>
+							<option value="30">Lunch - $30</option>
+							<option value="30">Dinner - $30</option>
+							<option value="90">All meals - $90</option>
+							<option value="0">none</option>
 						</select>
 						<div class="invalid-feedback">
 							Please select your meal option.
