Fixed issue of scrolling when wrong amount of days was outputted

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<option>6</option>
 						</select>
 						<div class="invalid-feedback">
-							Please selects the amount of guests.
+							Please select the amount of guests.
 						</div>
 					</div> <!-- container Ends-->
 				</div> <!-- slide1 Ends -->
@@ -103,7 +103,7 @@
 
 						<p class="optionsFont daySelectedTitle">You have selected...</p>
 						<div class="optionsFont howManyDays" id="daysSelected">0</div>
-						<div class="optionsFont howManyDays" id="daysText">Days</div>
+						<div class="optionsFont howManyDays" id="daysText">Nights</div>
 						<div class="note"><p>A minimum of 1 night is required. The max is 15 nights. <br> *Required Field<p></div>
 					</div>
 				</div>
@@ -111,7 +111,7 @@
 				<div class="slide" id="slide3" data-anchor="slide3">
 					<div class="container slideContainer">
 						<p class="smallLogo">Travel<br>Companion</p>
-						<h2 class="mainTitle">Select your meal options</h2>
+						<h2 class="mainTitle">Select your meal options.</h2>
 						<select class="form-control form-control-lg dropDownOption" id="getMealOption" required>
 							<option disabled selected value>Select an option</option>
 							<option value="30">Breakfast - $30</option>
