Added validation to dates slide. Cleaned up code. Fixed error of diffDays.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<!--[if IE]>
-		<script type="text/javascript">
-			 var console = { log: function() {} };
-		</script>
-	<![endif]-->
 </head>
+
 <body class="body">
 
 	<div class="loader">
@@ -102,9 +97,12 @@
 						</div><!-- slide2 Ends -->
 
 						<p class="optionsFont daySelectedTitle">You have selected...</p>
-						<div class="optionsFont howManyDays" id="daysSelected">0</div>
-						<div class="optionsFont howManyDays" id="daysText">Nights</div>
-						<div class="note"><p>A minimum of 1 night is required. The max is 15 nights. <br> *Required Field<p></div>
+						<div class="optionsFont howManyDays" id="nightsSelected">0</div>
+						<div class="optionsFont howManyDays" id="nightsText">Nights</div>
+						<div class="note">
+							<p>A minimum of 1 night is required. The max is 15 nights.
+							<br> *Required Field</p>
+							</div>
 					</div>
 				</div>
 
