Created function output user results on the results page. Created pseudo code for the total cost.

--- a/index.html
+++ b/index.html
@@ -169,14 +169,15 @@
 						<p class="smallLogoResults" id="travelCompanionLogo3rd">Travel<br>Companion</p>
 					</div>
 					<div class="col-4">
-						<form action="file:///Users/sumitramanga/Desktop/Foundation-JS/Travel-Companion/Website/index.html#firstPage">
+						<form action="/index.html#firstPage">
 							<button type="button" name="submit" class="restart">Start over</button>
 						</form>
 					</div>
 				</div>
 
 				<h2 class="mainTitle">Your Results</h2>
-				<h3 class="subTitle">Grand Milliennium - $199 per night</h3>
+				<h3 class="subTitle" id="accomName">Grand Milliennium - </h3>
+				<span class="subTitle" id="accomCost">$199 per night</span>
 
 				<div class="acomImgWrapper" id="acomImg">
 					<!-- <img class="acomImg" src="img/grandMillennium.jpg" alt=""> -->
@@ -185,17 +186,17 @@
 				<div id="summary">
 					<div class="wrapper">
 						<i class="fas fa-user resultsIcons"></i>
-						<span class="guestCount" id="guestsCount">5 guests</span>
+						<span class="guestCount" id="guestsCount"></span>
 					</div>
 
 					<div class="wrapper">
 						<i class="fas fa-utensils resultsIcons"></i>
-						<span class="mealOption" id="mealsOption">Full meal</span>
+						<span class="mealOption" id="mealsOption"></span>
 					</div>
 
 					<div class="wrapper">
 						<i class="far fa-calendar-alt resultsIcons"></i>
-						<span class="nights" id="nightsCount">5 nights (12/07/2018 - 16/07/2018)</span>
+						<span class="nights" id="nightsCount"></span>
 					</div>
 				</div>
 
