Created calculations. Created unique json data to output on click onto the results. Created accommodation choice array. Need to make json data dynamic and create a button to book now.

--- a/index.html
+++ b/index.html
@@ -176,12 +176,10 @@
 				</div>
 
 				<h2 class="mainTitle">Your Results</h2>
-				<h3 class="subTitle" id="accomName">Grand Milliennium - </h3>
-				<span class="subTitle" id="accomCost">$199 per night</span>
+				<h3 class="subTitle" id="accomName"></h3>
+				<span class="subTitle" id="accomCost"></span>
 
-				<div class="acomImgWrapper" id="acomImg">
-					<!-- <img class="acomImg" src="img/grandMillennium.jpg" alt=""> -->
-				</div>
+				<div class="acomImgWrapper" id="accomImg"></div>
 
 				<div id="summary">
 					<div class="wrapper">
@@ -201,7 +199,7 @@
 				</div>
 
 				<hr class="resultsHR">
-					<h3 class="total">Total Cost: <span class="totalCost" id="totalCost">$123NZD</span></h3>
+					<h3 class="total">Total Cost:</h3> <span class="total" id="totalCost"></span>
 				<hr class="resultsHR">
 
 				<div class="">
