Created modal onclick of marker. Need to push through to add specific details of the accommodation onto the modal and onclick of book now onto the results page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<h3 class="subTitle" id="accomName"></h3>
 				<span class="subTitle" id="accomCost"></span>
 
-				<div class="acomImgWrapper" id="accomImg"></div>
+				<div class="accomImg" id="accomImg"></div>
 
 				<div id="summary">
 					<div class="wrapper">
@@ -217,7 +217,7 @@
 
 
 
-	<!-- Modal -->
+	<!-- Help Modal -->
 	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -243,6 +243,32 @@
 				</div> <!-- modal-body ends -->
 			</div> <!-- modal-content ends -->
 		</div>	<!-- modal-dialog ends -->
+	</div> <!-- Modal ends -->
+
+
+	<!-- Accommodation Modal -->
+	<div class="modal fade accomModal" id="accomModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+					<h5></h5>
+          <button type="button" class="accomClose close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+
+	      <div class="modal-body">
+					<h4 class="modal-title" id="modalTitle">Grand Millennium Hotel - $199 per night</h4>
+					<div class="accomImg" id="modalImg"></div>
+					<p class="modalAccomDetails" id="modalAccomDetails"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae officia odit totam illum, obcaecati, distinctio ducimus. Delectus laboriosam veritatis quo nam excepturi, exercitationem fugit eos, culpa dolorum nulla in debitis! </p>
+	      </div>
+
+	      <div class="modal-footer">
+	        <button type="button" class="btn bookNowBtn">Book a room</button>
+	      </div>
+	    </div> <!-- Modal ends -->
+	  </div> <!-- modal-dialog ends -->
 	</div> <!-- Modal ends -->
 
 
