--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 	      <div class="modal-header">
 					<h5></h5>
-          <button type="button" class="accomClose close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="accomClose close" id="accomClose" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
 	        </button>
 	      </div>
@@ -265,7 +265,7 @@
 	      </div>
 
 	      <div class="modal-footer">
-	        <button type="button" class="btn bookNowBtn">Book a room</button>
+	        <button type="button" class="btn bookNowBtn" id="bookRoomBtn" data-dismiss="modal">Book a room</button>
 	      </div>
 	    </div> <!-- Modal ends -->
 	  </div> <!-- modal-dialog ends -->
