Filtering working now. geojson for accommodation is within one geojson. Added deatails for accommodation.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
 	      </div>
 
 	      <div class="modal-body">
-					<h4 class="modal-title" id="modalTitle">Grand Millennium Hotel - $199 per night</h4>
+					<h4 class="modal-title subTitle" id="modalTitle">Grand Millennium Hotel</h4>
+					<span class="subTitle">- $</span>
+					<span class="subTitle" id="modalAccomCost">199</span>
+					<span class="subTitle">per night</span>
 					<div class="accomImg" id="modalImg"></div>
 					<p class="modalAccomDetails" id="modalAccomDetails"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae officia odit totam illum, obcaecati, distinctio ducimus. Delectus laboriosam veritatis quo nam excepturi, exercitationem fugit eos, culpa dolorum nulla in debitis! </p>
 	      </div>
