Cleaned up code

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<p class="smallLogoResults" id="travelCompanionLogo3rd">Travel<br>Companion</p>
 					</div>
 					<div class="col-4">
-						<form action="/index.html#firstPage">
+						<form action="/#firstPage">
 							<button type="button" name="submit" class="restart">Start over</button>
 						</form>
 					</div>
