--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 
 <body class="body">
@@ -166,9 +166,7 @@
 						<p class="smallLogoResults" id="travelCompanionLogo3rd">Travel<br>Companion</p>
 					</div>
 					<div class="col-4">
-						<form action="/#firstPage">
-							<button type="button" name="submit" class="restart">Start over</button>
-						</form>
+						<a href="index.html#firstPage" class="restartBtn">Start Over</a>
 					</div>
 				</div>
 
