--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Travel Companion - Auckland Accommodation finder</title>
+
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|Raleway:300,400,700,800" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -161,14 +165,14 @@
 		<div class="section" id="section4">
 			<div class="wrapper">
 
-				<div class="row">
-					<div class="col-8">
+				<!-- <div class="row"> -->
+					<!-- <div class="col-8"> -->
 						<p class="smallLogoResults" id="travelCompanionLogo3rd">Travel<br>Companion</p>
-					</div>
-					<div class="col-4">
+					<!-- </div> -->
+					<!-- <div class="col-4"> -->
 						<a href="index.html#firstPage" class="restartBtn">Start Over</a>
-					</div>
-				</div>
+					<!-- </div> -->
+				<!-- </div> -->
 
 				<h2 class="mainTitle">Your Results</h2>
 				<h3 class="subTitle" id="accomName"></h3>
