Testing link to restart app

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 				<p class="smallLogoResults" id="travelCompanionLogo3rd">Travel<br>Companion</p>
 
-				<a href="index.html#firstPage" class="restartBtn">Start Over</a>
+				<a href="index.html" class="restartBtn">Start Over</a>
 
 				<h2 class="mainTitle">Your Results</h2>
 				<h3 class="subTitle" id="accomName"></h3>
