--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.js'></script>
 
 	<!-- ScrollMe Scripts -->
-	<script type="text/javascript" src="js/scrolloverflow.js"></script>
+	<script type="text/javascript" src="js/scrolloverflow.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 
 	<!-- Pick a date scripts -->
