Changed made in inline with user testing

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="optionsFont howManyDays" id="nightsSelected">0</div>
 						<div class="optionsFont howManyDays" id="nightsText">Nights</div>
 						<div class="note">
-							<p>A minimum of 1 night is required. The max is 15 nights.
+							<p class="datesSectionMsg">A minimum of 1 night is required. The max is 15 nights.
 							<br> *Required Field</p>
 							</div>
 					</div>
