Fixed landscape issue on ipad and laptop screens. Fixed css.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body class="body">
@@ -169,8 +169,8 @@
 
 				<a href="index.html" class="restartBtn">Start Over</a>
 
-				<h2 class="mainTitle">Your Results</h2>
-				<h3 class="subTitle" id="accomName"></h3>
+				<h2 class="mainTitle resultsTitle">Your Results</h2>
+				<h3 class="subTitle resultsAccomName" id="accomName"></h3>
 				<span class="subTitle" id="accomCost"></span>
 
 				<div class="accomImg" id="accomImg"></div>
@@ -178,17 +178,17 @@
 				<div id="summary">
 					<div class="wrapper">
 						<i class="fas fa-user resultsIcons"></i>
-						<span class="guestCount" id="guestsCount"></span>
+						<span class="guestCount resultsCardText" id="guestsCount"></span>
 					</div>
 
 					<div class="wrapper">
 						<i class="fas fa-utensils resultsIcons"></i>
-						<span class="mealOption" id="mealsOption"></span>
+						<span class="mealOption resultsCardText" id="mealsOption"></span>
 					</div>
 
 					<div class="wrapper">
 						<i class="far fa-calendar-alt resultsIcons"></i>
-						<span class="nights" id="nightsCount"></span>
+						<span class="nights resultsCardText" id="nightsCount"></span>
 					</div>
 				</div>
 
@@ -196,7 +196,7 @@
 					<h3 class="total">Total Cost:</h3> <span class="total" id="totalCost"></span>
 				<hr class="resultsHR">
 
-				<div class="">
+				<div class="bookingInstructsWrapper">
 					<p class="bookingInstructions">
 						Call us on <strong>+64 4 462 8001</strong> to confirm your booking with us.
 						<br>Please refer us with your booking code
