Added minified css and js

--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.css' rel='stylesheet'>
 
 	<!-- Pickadate CSS -->
-	<link rel="stylesheet" type="text/css" href="css/classic.css">
-	<link rel="stylesheet" type="text/css" href="css/classic.date.css">
+	<link rel="stylesheet" type="text/css" href="css/classic.date.min.css">
 
 	<!-- Page Piling CSS -->
-	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.min.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 
 <body class="body">
@@ -289,12 +288,12 @@
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 
 	<!-- Pick a date scripts -->
-	<script type="text/javascript" src="js/picker.js"></script>
-	<script type="text/javascript" src="js/picker.date.js"></script>
+	<script type="text/javascript" src="js/picker.min.js"></script>
+	<script type="text/javascript" src="js/picker.date.min.js"></script>
 
 	<!-- Custom JS -->
 	<script type="text/javascript" src="js/data.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/script.min.js"></script>
 
 </body>
 </html>
