added restricted scrolling and changed when arrows appear on form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 
-<body class="body">
+<body class="body" id="body">
 
 	<div class="loader">
 		<i class="fas fa-spinner fa-spin fa-7x"></i>
@@ -44,7 +44,7 @@
 						</button>
 					</div>
 
-				<div class="layer">
+				<div class="layer layerMain">
 					<img class="tourismNzLogo" src="img/tourismNewZealandLogo.png"  alt="Tourism New Zealand Logo">
 					<p class="travelCompanionLogo">Travel<br>Companion</p>
 					<p class="subText">Your go to app for finding accommodation within Auckland, New Zealand</p>
